calico-cloud_versioned_docs/version-2.2.0/operations/disconnect.mdx
---
title: Uninstall Calico Cloud from a cluster
description: Steps to use migration script to uninstall Calico Cloud from a cluster.
---

Whether you've finished with your {{prodname}} Trial or decided to disconnect your cluster from
{{prodname}}, we know you want your cluster to remain functional. We highly recommend running
a simple script to migrate your cluster to open-source Project Calico.

## Before you start...

Ensure that you have `kubectl` access to your Kubernetes cluster you wish to disconnect from {{prodname}}.

:::note

Disconnecting from {{prodname}} with a Rancher/RKE cluster currently has a bug, so this script is not expected to work. For Rancher/RKE clusters you should plan to recreate your cluster instead of disconnecting it.

:::

## About the migration script

The script migrates all applicable {{prodname}} components to open-source Project Calico; this includes
removal and cleanup of all {{prodname}} components that have no equivalents in Project Calico.
Because Project Calico does not have the tier resource, the script will exit if any policies
exist in any tier except for the `default` or `allow-tigera` tiers.
To remove policies from tiers, you have these options:

- Manually move policies out of tiers prior to running the script
- Let the script remove _ALL_ Calico policies by specifying the `--remove-all-calico-policy` flag

### Run the migration script

1. Download the script `curl -O {% include clouddownloadurl %}/downgrade.sh`.

1. Make the script executable `chmod +x downgrade.sh`.

1. Run the script and read the help to determine if you need to specify any flags `./downgrade.sh --help`.

1. Run the script with any needed flags, for example: `./downgrade.sh --remove-prometheus`.

## Next steps

Continue using your cluster with open-source [Project Calico](https://docs.projectcalico.org/about/about-calico).
