calico-cloud_versioned_docs/version-3.17/operations/disconnect.mdx
---
description: Steps to use migration script to uninstall Calico Cloud from a cluster.
---

import variables from '@site/calico-cloud_versioned_docs/version-3.17/variables';

# Uninstall Calico Cloud from a cluster

Whether you've finished with your {variables.prodname} Trial or decided to disconnect your cluster from
{variables.prodname}, we know you want your cluster to remain functional. We highly recommend running
a simple script to migrate your cluster to open-source Project Calico.

## Before you start...

Ensure that you have `kubectl` access to your Kubernetes cluster you wish to disconnect from {variables.prodname}.

## About the migration script

The script migrates all applicable {variables.prodname} components to open-source Project Calico; this includes
removal and cleanup of all {variables.prodname} components that have no equivalents in Project Calico.
Because Project Calico does not have the tier resource, the script will exit if any policies
exist in any tier except for the `default` or `allow-tigera` tiers.
To remove policies from tiers, you have these options:

- Manually move policies out of tiers prior to running the script
- Let the script remove _ALL_ Calico policies by specifying the `--remove-all-calico-policy` flag

:::note

To successfully downgrade to an open-source Calico configuration, policies must allow necessary traffic
to and from {variables.prodname} and open-source Calico namespaces. If you keep policies in the default tier 
(especially GlobalNetworkPolicies), and you have default deny policies, update or add policies accordingly
to allow this necessary traffic.

:::

### Run the migration script

1. Download the script `curl -O {variables.clouddownloadurl}/downgrade.sh`.

1. Make the script executable `chmod +x downgrade.sh`.

1. Run the script and read the help to determine if you need to specify any flags `./downgrade.sh --help`.

1. Run the script with any needed flags, for example: `./downgrade.sh --remove-prometheus`.

## Next steps

Continue using your cluster with open-source [Project Calico](/calico/latest/about).
